# master_arbeit_bxh

./: README.md
Coffee-Shop-Website/: README.md
Coffee-Shop-Website/coffee_ai_tests_generator(playwright_ai)/: README.md  run_env_test.py  run_generation_pipeline.py  run_random_agent.py  test_actions.py  test_open_coffee.py
kanban-task-management-web-app/: README.md
kanban-task-management-web-app/kanban_ai/: README.md  generate_tests_from_log.py  kanban_ai_agent.py
playwright-movies-app/: README.md
playwright-movies-app/movies_ai_TestGenerator_improved/: README.md  run_generation_pipeline_movies_structured.py
web_complexity/: config.yaml  pyproject.toml
web_complexity/complexity_results/: agent_metrics.csv  agent_metrics.json  apps_metrics.csv  apps_metrics.json  complexity_indices.csv  complexity_indices.json  complexity_report.html  log_metrics.csv  log_metrics.json  results_full.json  test_metrics.csv  test_metrics.json  ui_metrics.csv  ui_metrics.json
web_complexity/web_complexity_lab/: README.md  cli.py  config.py  pipeline.py
web_complexity/web_complexity_lab.egg-info/: SOURCES.txt  entry_points.txt
web_complexity/web_complexity_lab/collectors/: agent_log_parser.py  log_parser.py  test_parser.py  ui_structure_collector.py
web_complexity/web_complexity_lab/exporters/: csv_exporter.py  html_exporter.py  json_exporter.py
web_complexity/web_complexity_lab/features/: agent_metrics.py  aggregation.py  log_metrics.py  test_metrics.py  ui_metrics.py
web_complexity/web_complexity_lab/models/: complexity_index.py
(+25 files in other folders)
